# attribute_lark

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  main.py  pyproject.toml
attribute_lark/: __init__.py  ast_utils.py  attribute_lark.py  common.py  exceptions.py  grammar.py  indenter.py  lexer.py  load_grammar.py  parse_tree_builder.py  parser_frontends.py  reconstruct.py  tree.py  tree_matcher.py  tree_templates.py  utils.py  visitors.py
attribute_lark/__pyinstaller/: hook-lark.py
attribute_lark/parsers/: grammar_analysis.py  lalr_analysis.py  parser.py  pushdown_automata.py
attribute_lark/tools/: __init__.py  serialize.py
docs/: conf.py
examples/: calc.py  indented_tree.py  json_parser.py  lark_grammar.py  turtle_dsl.py
examples/advanced/: _json_parser.py  conf_lalr.py  create_ast.py  custom_lexer.py  error_handling.py  py3to2.py  python_parser.py  qscintilla_json.py  reconstruct_json.py  reconstruct_python.py  templates.py
examples/composition/: eval_csv.py  eval_json.py  main.py
examples/relative-imports/: multiples.py
examples/standalone/: json_parser_main.py
lark/: common.py  grammar.py  lark.py  load_grammar.py  parse_tree_builder.py  parser_frontends.py  tree_matcher.py
lark/parsers/: lalr_analysis.py  (+2 more)
tests/: __main__.py  test_attributes.py  test_cache.py  test_grammar.py  test_interactive_parser.py  test_lexer.py  test_lexer_edge_cases.py  test_logger.py  test_parser.py  test_pattern_matching.py  test_pda_edge_cases.py  test_python_grammar.py  test_reconstructor.py  test_tools.py  test_tree_templates.py  test_trees.py
(+6 files in other folders)
